# fight-game-idk

./: CMakeLists.txt
include/: Game.h
include/NPCs/: Entity.h  Player.h
include/NPCs/Projectiles/: Bullet.h
src/: Game.cpp  main.cpp
src/NPCs/: Entity.cpp  Player.cpp
src/NPCs/Projectiles/: Bullet.cpp
tests/: test_Bullet.cpp  test_Entity.cpp  test_Game.cpp  test_Player.cpp
